--- a/css/styles.css
+++ b/css/styles.css
@@ -248,8 +248,30 @@ footer {
   background-position: center center;
   position: relative;
 }
-.address {
+address a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  color: #404bbf;
+  background-color: #404bbf;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+address a:focus::after,
+address a:hover::after {
+  transform: scaleX(1);
+}
+address a:hover {
+  color: #404bbf;
+}
+address a {
+  position: relative;
   color: #434455;
+  text-decoration: none;
 }
 .link {
   color: #2e2f42;
