--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,6 @@ nav a::after {
   color: #404bbf;
   background-color: #404bbf;
   transform: scaleX(0);
-  transform-origin: left;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 nav a:focus::after,
@@ -177,6 +176,7 @@ p {
   display: block;
   margin: 48px auto;
   border-radius: 4px;
+  border: none;
   /* display ve margin kismini anlamadim geri don*/
   width: 169px;
   height: 56px;
@@ -233,6 +233,30 @@ footer {
   font-weight: 700;
   color: #2e2f42;
 }
+.imagewrapper {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  font-family: "Roboto", "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+}
+.ourportfolio img:hover + .overlay {
+  transform: translateY(0);
+}
+.overlay p {
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+}
 .title {
   background-image: linear-gradient(
       to bottom,
@@ -258,7 +282,6 @@ address a::after {
   color: #404bbf;
   background-color: #404bbf;
   transform: scaleX(0);
-  transform-origin: left;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 address a:focus::after,
@@ -296,12 +319,4 @@ ul {
 }
 .ourteam {
   background-color: #f4f4fd;
-}
-.aaa {
-  border: 1px solid red;
-  background-color: #eeeeee;
-  border-radius: 4px;
-  text-align: center;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
