--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,9 @@ ul {
 header {
   display: flex;
   justify-content: space-between;
-  padding: 24px 156px 24px 156px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-left: 156px;
   border-bottom: 1px solid #e7e9fc;
 }
 .logomenu {
@@ -71,8 +73,6 @@ body {
 .ourportfolio {
   flex-wrap: wrap;
 }
-.container,
-.ourteam ul,
 .row1,
 .row2 {
   padding-left: 156px;
@@ -80,9 +80,12 @@ body {
   display: flex;
   justify-content: center;
 }
+.ourteam ul {
+  display: flex;
+  justify-content: center;
+}
 .container {
   width: 1158px;
-  margin: 0 auto;
 }
 .ourteam ul {
   gap: 24px;
@@ -115,15 +118,20 @@ body {
   padding-bottom: 120px;
 }
 .mainideas {
+  display: flex;
   padding-bottom: 120px;
   padding-top: 120px;
   gap: 24px;
+  margin-left: 156px;
 }
 .ourportfolio h3 {
   margin: 32px auto 8px 16px;
 }
 .ourportfolio p {
   margin: 8px auto 32px 16px;
+}
+.ourportfolio {
+  margin-left: 156px;
 }
 .ourteamcontent {
   flex-wrap: wrap;
@@ -149,6 +157,7 @@ body {
   justify-self: center;
   gap: 24px;
   margin-top: 8px;
+  transition: 250ms;
 }
 h1 {
   font-size: 56px;
@@ -163,6 +172,8 @@ h2 {
   color: #2e2f42;
   padding-top: 120px;
   padding-bottom: 72px;
+  width: fit-content;
+  margin: 0 auto;
 }
 h3 {
   font-size: 20px;
@@ -327,4 +338,5 @@ ul {
 }
 .ourteam {
   background-color: #f4f4fd;
+  width: 1440px;
 }
